Fixing button spacing

--- a/app/components/aside_component/aside_component.scss
+++ b/app/components/aside_component/aside_component.scss
@@ -48,7 +48,7 @@
   
   .button {
     width: 250px;
-    margin-top: 1rem;
+    margin-top: 1rem 0 0;
   }
 
   img {
